testsuite/tests/grammar/invalid_token_node/test.out
== derive_field/test.lkt ==
test.lkt:9:5: error: Invalid field type in this context
9 |     f: Identifier
  |     ^^^^^^^^^^^^^


== derive_trait/test.lkt ==
test.lkt:9:16: error: token nodes cannot inherit from nodes that have parse fields
9 | class Example: BaseExample implements TokenNode {
  |                ^^^^^^^^^^^


lkt_compile: Done
